--- a/conf/kong.yml
+++ b/conf/kong.yml
@@ -2,19 +2,28 @@ _format_version: "2.1"
 _transform: true
 
 services:
-  - name: profile
+  - name: profile_current
     url: http://localhost:9080/api/v1/profiles/current
     routes:
-      - paths:
+      - name: profile_current
+        paths:
           - /api/v1/profiles/current
-    plugins:
-      - name: key-auth
-        config:
-          key_names:
-            - apikey
-          hide_credentials: true
 
+  - name: profile_size
+    url: http://localhost:9080/api/v1/profiles?size=20
+    routes:
+      - name: profile_size_route
+        paths:
+          - /api/v1/profiles?size=20
+
+  - name: profile_all
+    url: http://localhost:9080/api/v1/profiles
+    routes:
+      - name: profile_all
+        paths:
+          - /api/v1/profiles
 consumers:
   - username: sara
     key-auths:
       - key: DDf6tyqpQa5711Z262iT3Uz6R4EaCS51
+
