--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -41,39 +41,19 @@ services:
     volumes:
       - ./swagger:/doc
   kong:
-    image: kong:latest
-    depends_on:
-      - kong-db
+    image: kong:3.1.1-alpine
     environment:
-      KONG_DATABASE: "postgres"
-      KONG_PG_HOST: "kong-db"
-      KONG_PG_USER: "kong"
-      KONG_PG_PASSWORD: "kong"
+      KONG_DATABASE: "off"
+      KONG_DECLARATIVE_CONFIG: "/usr/local/kong/declarative/kong.yml"
       KONG_PROXY_ACCESS_LOG: "/dev/stdout"
       KONG_ADMIN_ACCESS_LOG: "/dev/stdout"
       KONG_PROXY_ERROR_LOG: "/dev/stderr"
       KONG_ADMIN_ERROR_LOG: "/dev/stderr"
       KONG_ADMIN_LISTEN: "0.0.0.0:8001, 0.0.0.0:8444 ssl"
+    volumes:
+      - ./conf:/usr/local/kong/declarative
     ports:
       - "8000:8000"
       - "8443:8443"
       - "8001:8001"
       - "8444:8444"
-
-  kong-db:
-    image: postgres:latest
-    environment:
-      POSTGRES_USER: "kong"
-      POSTGRES_PASSWORD: "kong"
-      POSTGRES_DB: "kong"
-
-  kong-init:
-    image: kong:latest
-    depends_on:
-      - kong-db
-    command: kong migrations bootstrap
-    environment:
-      KONG_DATABASE: "postgres"
-      KONG_PG_HOST: "kong-db"
-      KONG_PG_USER: "kong"
-      KONG_PG_PASSWORD: "kong"
