--- a/brinder-match/lib/package.json
+++ b/brinder-match/lib/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "mongo": "^0.1.0"
+    "geolib": "^3.3.4",
+    "mongodb": "^6.3.0"
   }
 }
