--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,10 +6,14 @@ services:
       KEYCLOAK_ADMIN_PASSWORD: keycloak
     ports:
       - 8080:8080
-  mongo:
+
+  mongodb:
     image: mongo
     ports:
       - "27017:27017"
+    volumes:
+    - ./mongo/init-db.js:/docker-entrypoint-initdb.d/script.js:ro
+
   profile:
     build: ./brinder-profile-api
     ports:
@@ -17,7 +21,16 @@ services:
     environment:
       spring_profiles_active: security,docker
     depends_on:
-      - mongo
+      - mongodb
+
+  brinder-match-api:
+    build: ./brinder-match-api
+    ports:
+      - 8081:8081
+    depends_on:
+      - mongodb
+
+
   swagger:
     image: swaggerapi/swagger-ui
     environment:
@@ -32,3 +45,34 @@ services:
       - 8888:8080
     volumes:
       - ./swagger:/doc
+
+  kong:
+    image: kong:alpine
+    depends_on:
+      - kong-base
+    environment:
+      KONG_DATABASE: "cassandra"
+      KONG_CASSANDRA_CONTACT_POINTS: "kong-base"
+      KONG_PROXY_ACCESS_LOG: "/dev/stdout"
+      KONG_ADMIN_ACCESS_LOG: "/dev/stdout"
+      KONG_PROXY_ERROR_LOG: "/dev/stderr"
+      KONG_ADMIN_ERROR_LOG: "/dev/stderr"
+      KONG_ADMIN_LISTEN: "0.0.0.0:8001, 0.0.0.0:8444 ssl"
+    ports:
+      - "8000:8000"
+      - "8443:8443"
+      - "8001:8001"
+      - "8444:8444"
+  cassandra-init:
+    image: kong:alpine
+    environment:
+      KONG_DATABASE: cassandra
+      KONG_CASSANDRA_CONTACT_POINTS: kong-base
+    command: kong migrations bootstrap
+  kong-base:
+    image: cassandra:3
+    volumes:
+      - cassandra-data:/var/lib/cassandra
+
+volumes:
+  cassandra-data:
