--- a/api-manager/config/apis.yaml
+++ b/api-manager/config/apis.yaml
@@ -1,7 +1,7 @@
 format_version: "1.1"
 apis:
   - name: brinder-match
-    uris: /match
+    uris: /api/v1
     upstream_url: http://localhost:3000
     plugins:
       - name: key-auth
