--- a/swagger/tindeer.yaml
+++ b/swagger/tindeer.yaml
@@ -1,7 +1,10 @@
 openapi: 3.0.0
 info:
   title: Tindeer API
-  description: Notre super API pour notre application mobile de rencontre de Rennes
+  description: |- 
+    **`Nabile BATAILLE`** et **`Clément MOULY`**
+    
+    Notre super API pour notre application mobile de rencontre de Rennes
   version: 1.0.0
 servers:
   - url: http://kong:8000/api/v1
@@ -26,13 +29,86 @@ components:
           scopes:
             profile: access profile
             email: access email
+  schemas:
+    ProfileDto:
+      type: object
+      properties:
+        id:
+          type: string
+          description: "The unique identifier of the profile."
+        userId:
+          type: string
+          description: "The user's unique identifier, extracted from JWT claims."
+        mail:
+          type: string
+          format: email
+          description: "The user's email address."
+        age:
+          type: integer
+          format: int32
+          minimum: 13
+          description: "The user's age, must be at least 13."
+        firstName:
+          type: string
+          description: "The user's first name."
+        lastName:
+          type: string
+          description: "The user's last name."
+        created:
+          type: string
+          format: 'date-time'
+          description: "The timestamp when the profile was created, in YYYY-MM-DD HH:mm:ss format."
+        modified:
+          type: string
+          format: 'date-time'
+          description: "The timestamp when the profile was last modified, in YYYY-MM-DD HH:mm:ss format."
+      required:
+        - userId
+        - mail
+        - firstName
+        - lastName
+    PageDtoProfileDto:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            $ref: '#/components/schemas/ProfileDto'
+        totalElements:
+          type: integer
+          description: Total number of elements.
+        pageSize:
+          type: integer
+          description: Number of elements per page.
+        next:
+          type: string
+          format: uri
+          description: URI to the next page of results.
+        first:
+          type: string
+          format: uri
+          description: URI to the first page of results.
+        last:
+          type: string
+          format: uri
+          description: URI to the last page of results.
+
 security:
   - oAuthSample:
       - profile
       - email
+tags:
+  - name: profile
+    description: Profiles
+  - name: match
+    description: Matches
+
 paths:
-  /users:
+  ## Matches
+  /matches/users:
     get:
+      tags:
+        - match
       summary: Retrieves the list of users
       responses:
         '200':
@@ -59,6 +135,8 @@ paths:
                           format: float
                           example: 2.3522219
     post:
+      tags:
+        - match
       summary: Creates a new user profile
       requestBody:
         required: true
@@ -115,8 +193,10 @@ paths:
         '500':
           description: Internal Server Error - Error occurred while creating user profile
 
-  /profiles:
+  /matches/profiles:
     get:
+      tags:
+        - match
       summary: Retrieves user profiles within 100 meters of the connected user
       responses:
         '200':
@@ -128,36 +208,100 @@ paths:
                 properties:
                   name:
                     type: string
+
+  ## Profiles
   /profiles/current:
     get:
+      tags:
+        - profile
       summary: Retourne le profile courant de l'utilisateur
       responses:
-        '200': # status code
-          description: A JSON array of user names
+        '200':
+          description: Profile retrieved successfully
           content:
             application/json:
               schema:
-                type: object
-                properties:
-                  name:
-                    type: string
+                $ref: '#/components/schemas/ProfileDto'
+        '404':
+          description: Profile not found
+        '400':
+          description: Bad request
 
   /profiles:
     post:
-      summary: Crée le profile d'un utilisateur
-      responses:
-        '201':
-          description: Profile créé
-        '400':
-          description: Données invalides fournies
-    get:
-      summary: Récupère la liste des profils
+      tags:
+        - profile
+      summary: Create a new profile with the currently authenticated user's ID
       responses:
         '200':
-          description: Liste des profils
-
+          description: Profile created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProfileDto'
+        '400':
+          description: Bad request
+    get:
+      tags:
+        - profile
+      summary: Search profiles
+      description: Returns a paginated list of profiles based on the optional query parameter.
+      parameters:
+        -   in: query
+            name: query
+            schema:
+              type: string
+            required: false
+            description: Optional query string for searching profiles.
+        -   in: query
+            name: page
+            schema:
+              type: integer
+            required: false
+            description: Page number of the results to fetch.
+        -   in: query
+            name: size
+            schema:
+              type: integer
+            required: false
+            description: Number of records per page.
+      responses:
+        '200':
+          description: A paginated list of profiles.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PageDtoProfileDto'
+        '400':
+          description: Bad request
+      operationId: searchProfile
+    put:
+      tags:
+        - profile
+      summary: Update current user's profile
+      description: Updates the profile of the currently authenticated user using JWT claims.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProfileDto'
+      responses:
+        '200':
+          description: Profile updated successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProfileDto'
+        '404':
+          description: Profile not found
+        '400':
+          description: Bad request
+      operationId: updateProfile
   /profiles/{id}:
     get:
+      tags:
+        - profile
       summary: Récupère le profil d'un utilisateur grâce à son ID
       parameters:
         -   name: id
@@ -167,58 +311,15 @@ paths:
               type: string
       responses:
         '200':
-          description: Détails du profil utilisateur
+          description: Profile retrieved successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProfileDto'
         '404':
-          description: Profil non trouvé
-
-    put:
-      summary: Met à jour le profil d'un utilisateur
-      parameters:
-        -   name: id
-            in: path
-            required: true
-            schema:
-              type: string
-      responses:
-        '200':
-          description: Profil mis à jour
+          description: Profile not found
         '400':
-          description: Données invalides fournies
-        '404':
-          description: Profil non trouvé
+          description: Bad request
 
-  /profiles/search:
-    get:
-      summary: Recherche de profils
-      responses:
-        '200':
-          description: Liste des profils correspondants
 
-  /profiles/search-by-mail:
-    get:
-      summary: Recherche de profils par e-mail
-      responses:
-        '200':
-          description: Liste des profils correspondants
 
-  /matchs/users:
-    get:
-      summary: Récupère les utilisateurs à 100m
-      responses:
-        '200':
-          description: Liste des utilisateurs proches
-
-  /matchs:
-    post:
-      summary: Crée un match
-      responses:
-        '201':
-          description: Match créé
-        '400':
-          description: Données invalides fournies
-
-    get:
-      summary: Voir les personnes avec qui on a matché
-      responses:
-        '200':
-          description: Liste des matchs
