--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,5 @@
 services:
+
   keycloak:
     build: ./keycloak
     environment:
@@ -6,10 +7,12 @@ services:
       KEYCLOAK_ADMIN_PASSWORD: keycloak
     ports:
       - 8080:8080
+
   mongo:
     image: mongo
     ports:
       - "27017:27017"
+
   mongo-express:
     image: mongo-express
     ports:
@@ -18,6 +21,7 @@ services:
       ME_CONFIG_MONGODB_SERVER: mongo
       ME_CONFIG_BASICAUTH_USERNAME: toto
       ME_CONFIG_BASICAUTH_PASSWORD: toto
+
   profile:
     build: ./brinder-profile-api
     ports:
@@ -26,6 +30,7 @@ services:
       spring_profiles_active: security,docker
     depends_on:
       - mongo
+
   swagger:
     image: swaggerapi/swagger-ui
     environment:
@@ -40,3 +45,12 @@ services:
       - 8888:8080
     volumes:
       - ./swagger:/doc
+
+  match:
+    build: ./brinder-match
+    ports:
+      - "3000:3000"
+    environment:
+      NODE_ENV: production
+    depends_on:
+      - mongo
