--- a/brinder-match/lib/package.json
+++ b/brinder-match/lib/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "geolib": "^3.3.4",
-    "mongodb": "^6.3.0"
+    "mongodb": "^6.3.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
