--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,3 +54,45 @@ services:
       NODE_ENV: production
     depends_on:
       - mongo
+
+  kong-database:
+    image: postgres:9.6
+    environment:
+      POSTGRES_USER: kong
+      POSTGRES_PASSWORD: kong
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+  kong:
+    image: kong:latest
+    links:
+      - kong-database:kong-database
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: kong-database
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: kong
+      KONG_ADMIN_LISTEN: 0.0.0.0:8001
+    ports:
+      - "8000:8000"
+      - "8443:8443"
+      - "8001:8001"
+    depends_on:
+      - kong-database
+
+  kong-migration:
+    image: kong:latest
+    restart: "no"
+    links:
+      - kong-database:kong-database
+    command: kong migrations bootstrap
+    environment:
+      KONG_DATABASE: postgres
+      KONG_PG_HOST: kong-database
+      KONG_PG_USER: kong
+      KONG_PG_PASSWORD: kong
+    depends_on:
+      - kong-database
+
+volumes:
+  postgres_data:
