--- a/swagger/tindeer.yaml
+++ b/swagger/tindeer.yaml
@@ -7,14 +7,14 @@ info:
     Notre super API pour notre application mobile de rencontre de Rennes
   version: 1.0.0
 servers:
-  - url: http://kong:8000/api/v1
-    description: kong
-  - url: http://api-match:3000/api/v1
-    description: api-match
   - url: http://localhost:9080/api/v1
     description: profile api - Docker
   - url: http://localhost:9090/api/v1
     description: profile api - Local
+  - url: http://localhost:3000/api/v1
+    description: match api
+  - url: http://localhost:8001/api/v1
+    description: kong
 components:
   securitySchemes:
     oAuthSample:
@@ -99,8 +99,7 @@ tags:
   - name: profile
     description: Profiles
   - name: match
-    description: Matches
-
+    description: Matches | ATTENTION | LES JSON DE RETOURS NE PASSENT PLUS SUR LE SWAGGER SI LE CURL EST ENVOYÉ AVEC LE WEBTOKEN -> POUR TESTER UTILISER LE CURL
 paths:
   ## Matches
   /matches/users:
